[package]
name = "hvec"
version = "0.1.0"
authors = ["Vi <violet@hey.com>"]
edition = "2021"
description = "A Vec-like structure that can store different types of different sizes contiguous with each other in memory."
homepage = "https://github.com/mistodon/hvec"
repository = "https://github.com/mistodon/hvec"
readme = "README.md"
keywords = ["vec", "vector", "heterogeneous", "any"]
categories = ["data-structures"]
license = "CC0-1.0"

[dev-dependencies]
criterion = "~0.3.5"

[[bench]]
name = "sum_with_optionals"
harness = false
